k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-backend-svc
spec:
  selector:
    app: python-backend
  ports:
  - port: 80      
    targetPort: 8000
